--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <title>soujatya's Personal Sites</title>
 </head>
+
 <body>
-    
+  <table cellspacing="5">
+    <tr>
+      <td><img src="soujatya.ping.jpg" alt="soujatya's profile"></td>
+      <td>  <h1>Soujatya Khan</h1>
+      <p><em> <strong>CSE student  Of UEM Kolkata </strong> </em></p>
+      <p>I am a full stack web developer  & also Competetive programmer</p>
+      <p> My Leetcode profile <a href="https://leetcode.com
+      ">soujatyakhan4138</a> </p></td>
+    </tr>
+  </table>
+
+
+<hr>
+<h3><strong>Books and Teaching</strong> </h3>
+<ul>
+  <li>The complete developement</li>
+  <li>Make won start up </li>
+</ul>
+<hr>
+<h3>Work Experience</h3>
+<table>
+  <thead>
+    <tr>
+    <th>Dates</th>
+    <th>Work</th>
+
+      </tr>
+  </thead>
+  <tbody>
+
+  </tbody>
+  <tfoot>
+
+  </tfoot>
+  <tr>
+    <td>2019-2023</td>
+    <td>CSE student UEM Kolkata</td>
+  </tr>
+  <td>2022</td>
+  <td>Starting my developping journey</td>
+  <tr>
+
+  </tr>
+</table>
+<hr>
+<h3>Skills</h3>
+<table>
+<tr>
+  <td>
+    <table>
+      <tr>
+        <td>IOS developement</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td> Web developement</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Competetive programming</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+    </table>
+  </tr>
+</table>
+
+<hr>
+<a href="hobbies.html">My Hobbies</a>
+<a href="contact.html">Contact Me</a>
+
+
 </body>
+
 </html>
